--- a/index.html
+++ b/index.html
@@ -25,8 +25,9 @@
 	<body>
 		<div class="reveal">
 			<div class="slides">
-				<section>Slide 1</section>
-				<section>Slide 2</section>
+				<section>
+					<a href="presentation/clang-tools.html"><h2>Clang Tools</h2></a>
+				</section>
 			</div>
 		</div>
 
