Links to the pdf version of the presentation

--- a/presentation/clang-tools.html
+++ b/presentation/clang-tools.html
@@ -37,7 +37,8 @@
 				</section>
 				<section>
 					<h2>Clang Tools</h2>
-					<p class="fragment fade-up"><a href="https://cjrams.github.io/presentations/presentation/clang-tools.html" target="_blank">Presentation on github</a><br>
+					<p class="fragment fade-up"><a href="https://cjrams.github.io/presentations/presentation/clang-tools.html" target="_blank">Presentation on github</a> 
+					<a href="https://cjrams.github.io/presentations/presentation/clang-tools.html?print-pdf" target="_blank">(pdf version)</a> <br>
 					https://cjrams.github.io/clang-tools.html<br>
 					Also on the meetup group 🤞</p>
 					<p class="fragment fade-up">Please, find the typos, and <a href="https://github.com/cjrams/cjrams.github.io/blob/master/presentations/presentation/clang-tools.html" target="_blank">contribute</a></p>
@@ -331,7 +332,8 @@ int main(int argc, char **argv) {
 				</section>
 				<section>
 					<h2>Reference</h2>
-					<p class="fragment fade-up"><a href="https://cjrams.github.io/presentations/presentation/clang-tools.html" target="_blank">Presentation github</a><br>
+					<p class="fragment fade-up"><a href="https://cjrams.github.io/presentations/presentation/clang-tools.html" target="_blank">Presentation on github</a> 
+					<a href="https://cjrams.github.io/presentations/presentation/clang-tools.html" target="_blank">(pdf version)</a><br>
 					https://cjrams.github.io/clang-tools.html</p>
 					<p class="fragment fade-up">Please, find the typos, and <a href="https://github.com/cjrams/cjrams.github.io/blob/master/presentations/presentation/clang-tools.html" target="_blank">contribute</a></p>
 				</section>
