Added section ast matchers and other tools

--- a/presentation/working.html
+++ b/presentation/working.html
@@ -47,15 +47,7 @@
 				keyboard: true,
 			});
 			Reveal.configure({ 
-				slideNumber: 'c/t',
-				keyboard: {
-					48: slide( 0 ),
-					49: slide( 5 ),
-					50: slide( 17 ),
-					51: slide( 28 ),
-					52: function() {Reveal.slide( 29 )},
-					56: slide( 30 ),
-				}
+				slideNumber: 'c/t'
 			}); 
 		</script>
 	</body>
