--- a/presentation/clang-tools.html
+++ b/presentation/clang-tools.html
@@ -106,8 +106,8 @@
 						</code></pre>
 						<pre><code data-trim data-noescape>
 ---
-Language:        Cpp
-BasedOnStyle:  LLVM
+Language: Cpp
+BasedOnStyle: LLVM
 AccessModifierOffset: -2
 AlignAfterOpenBracket: Align
 AlignConsecutiveMacros: false
@@ -214,7 +214,7 @@ if (something === 'something') {
 					<pre class="fragment fade-up"><code data-trim data-noescape>
 					clang-tidy test.cpp -checks=-*,clang-analyzer-*,-clang-analyzer-cplusplus*
 					</code></pre></span></p>
-					<p class="fragment fade-up">Plus compilation library</p>
+					<p class="fragment fade-up">Plus compilation library 🤞</p>
 				</section>
 				<section>
 					<h3>Clang Tidy</h3>
