Added remote control plugin

--- a/presentation/clang-tools.html
+++ b/presentation/clang-tools.html
@@ -29,13 +29,14 @@
 					<h3>Boosting your code quality with</h3>
 					<h1>Clang tools</h1>
 				</section>
-				<section data-background-image="../img/KingBrand_masterLogo_400X274.png" 
+				<section data-background-image="../img/king.png" 
 					data-background-position="bottom 2em right 2em" data-background-size="25%">
 					<h2>Carlos Jimenez Rams</h2>
 					<p class="fragment fade-up">Working at King Since January 2014</p>
 					<p class="fragment fade-up">Mobile C++ development enthusiast</p>
 					<p class="fragment fade-up">Stockholm C++ Meetup, Barcelona C++ Meetup</p>
 					<p class="fragment fade-up">Not so used to public speaking 😅</p>
+					<p class="fragment fade-up"><a href="https://www.linkedin.com/in/cjrams/" target="_blank">https://www.linkedin.com/in/cjrams/</a></p>
 					<img class="img-circle" src="../img/cjrams.png">
 				</section>
 				<section>
@@ -562,7 +563,9 @@ void MyFirstCheckCheck::registerMatchers(MatchFinder *Finder) {
 					{ src: '../plugin/markdown/marked.js' },
 					{ src: '../plugin/markdown/markdown.js' },
 					{ src: '../plugin/notes/notes.js', async: true },
-					{ src: '../plugin/highlight/highlight.js', async: true, callback: function() { hljs.initHighlightingOnLoad(); } }
+					{ src: '../plugin/highlight/highlight.js', async: true, callback: function() { hljs.initHighlightingOnLoad(); } },
+					{ src: 'http://localhost:3001/socket.io/socket.io.js', async: true },
+					{ src: '../plugins/remote-control/remote.js', async: true }
 				],
 				keyboard: true,
 			});
